tests/NormalTests/paczka1/fuzzy1/30529745.err
Error in line 20: ma04 S904 82,0
Error in line 29: A317 S857 97,0
